[package]
name = "nullsec-injector"
version = "2.0.0"
edition = "2021"
authors = ["bad-antics"]
description = "Hardened process memory injection toolkit for security research"
license = "MIT"
repository = "https://github.com/bad-antics/nullsec-injector"
keywords = ["security", "injection", "memory", "research", "pentest"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[dependencies]
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "warn"
pedantic = "warn"
nursery = "warn"
